Prevent total score result from wrapping

--- a/src/app/components/readnlisten/book-results.component.css
+++ b/src/app/components/readnlisten/book-results.component.css
@@ -94,6 +94,9 @@
   color: red;
   font-size: 20px;
 }
+.nr {
+  white-space: nowrap;
+}
 @media screen and (max-width: 500px) {
   .chart-label {display: none;}
 }
